--- a/client/public/index.html
+++ b/client/public/index.html
@@ -138,6 +138,8 @@
       });
     
     </script>
+    <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
+    <script src="https://files.bpcontent.cloud/2024/10/03/12/20241003121018-G9HC2GOM.js"></script>
     
   </body>
 </html>
