--- a/client/public/index.html
+++ b/client/public/index.html
@@ -36,8 +36,10 @@
     </style>
 </head>
 <body>
-
+    <a href="quiz.html"><h3>Book Preference Quiz</h3></a>
+   
     <h1>Book Categories</h1>
+
     <div class="grid">
         <div class="card">
             <h3>Action</h3>
