changed background color of quiz

--- a/client/public/quiz.html
+++ b/client/public/quiz.html
@@ -16,7 +16,7 @@
 
         h1 {
             text-align: center;
-            color: #007bff;
+            color: #ffffff;
             margin-bottom: 30px;
         }
 
@@ -45,7 +45,7 @@
         }
 
         button {
-            background-color: #f76b45;
+            background-color: #033aa1;
             color: white;
             padding: 10px 15px;
             border: none;
@@ -66,7 +66,7 @@
     </style>
 </head>
 
-<body>
+<body  style="background-color: darkblue;">
 
     <h1>Book Preference Form</h1>
     <div class="form-container">
