--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
         .button {
-            background-color: #f76b45;
+            background-color:darkblue;
             color: white;
             padding: 10px 20px;
             border: none;
@@ -33,9 +33,15 @@
             margin-top: 10px;
             text-decoration: none;
         }
+        h3{
+            color:rgb(227, 142, 31)
+        }
+        h1{
+            color:aliceblue;
+        }
     </style>
 </head>
-<body>
+<body style="background-color: darkblue;">
     <a href="quiz.html"><h3>Book Preference Quiz</h3></a>
    
     <h1>Book Categories</h1>
