--- a/client/public/philosophy.html
+++ b/client/public/philosophy.html
@@ -84,7 +84,7 @@
     </style>
 </head>
 
-<body>
+<body style="background-color: darkblue;">
 
     <div class="category-title"><h2>PHILOSOPHY BOOKS</h2></div>
     <div id="book-list" class="book-list"></div>
