made changes to bg color

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,14 +18,14 @@
             gap: 20px;
         }
         .card {
-            background: #fff;
+            background: darkblue;
             border-radius: 8px;
             padding: 20px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
         .button {
-            background-color:darkblue;
-            color: white;
+            background-color:rgb(249, 249, 249);
+            color:rgb(177, 115, 2);
             padding: 10px 20px;
             border: none;
             border-radius: 5px;
@@ -41,7 +41,7 @@
         }
     </style>
 </head>
-<body style="background-color: darkblue;">
+<body >
     <a href="quiz.html"><h3>Book Preference Quiz</h3></a>
    
     <h1>Book Categories</h1>
