--- a/client/public/manga.html
+++ b/client/public/manga.html
@@ -21,7 +21,7 @@
         }
 
         .category-title {
-            background-color: #f76b45;
+            background-color: darkblue;
             color: white;
             padding: 10px;
             border-radius: 5px;
@@ -51,7 +51,7 @@
         }
 
         .button {
-            background-color: #f76b45;
+            background-color: darkblue;
             color: white;
             padding: 10px 20px;
             border: none;
