--- a/client/public/quiz.html
+++ b/client/public/quiz.html
@@ -16,7 +16,7 @@
 
         h1 {
             text-align: center;
-            color: #ffffff;
+            color:darkblue;
             margin-bottom: 30px;
         }
 
@@ -66,7 +66,7 @@
     </style>
 </head>
 
-<body  style="background-color: darkblue;">
+<body>
 
     <h1>Book Preference Form</h1>
     <div class="form-container">
@@ -131,5 +131,4 @@
     </script>
 
 </body>
-
 </html>
