--- a/client/public/action.html
+++ b/client/public/action.html
@@ -21,7 +21,7 @@
         }
 
         .category-title {
-            background-color: #f76b45;
+            background-color: darkblue;
             color: white;
             padding: 10px;
             border-radius: 5px;
@@ -84,7 +84,7 @@
     </style>
 </head>
 
-<body style="background-color: darkblue;">
+<body >
 
    
     <div class="category-title"> <h2>Action Books</h2></div>
