--- a/client/public/tech.html
+++ b/client/public/tech.html
@@ -21,7 +21,7 @@
         }
 
         .category-title {
-            background-color: #f76b45;
+            background-color: darkblue;
             color: white;
             padding: 10px;
             border-radius: 5px;
@@ -84,7 +84,7 @@
     </style>
 </head>
 
-<body style="background-color: darkblue;">
+<body >
 
     <div class="category-title"><h2>TECHNOLOGY BOOKS</h2></div>
     <div id="book-list" class="book-list"></div>
