--- a/client/public/quiz.html
+++ b/client/public/quiz.html
@@ -63,6 +63,15 @@
         .hidden {
             display: none;
         }
+        div{
+            box-shadow:10px 10px rgb(214, 230, 4) ;
+        } 
+        div:hover{
+            color: #f45e13;
+            background-color: #007bff;
+            cursor: pointer;
+        }
+       
     </style>
 </head>
 
