--- a/client/public/books.html
+++ b/client/public/books.html
@@ -39,6 +39,14 @@
         h1{
             color:aliceblue;
         }
+        div{
+            box-shadow:10px 10px rgb(214, 230, 4) ;
+        } 
+        div:hover{
+            color: #f45e13;
+            background-color: #007bff;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body >
