--- a/client/public/philosophy.html
+++ b/client/public/philosophy.html
@@ -81,6 +81,14 @@
             margin-top: 5px;
             font-size: 14px;
         }
+        div{
+            box-shadow:10px 10px rgb(214, 230, 4) ;
+        } 
+        div:hover{
+            color: #f45e13;
+            background-color: #007bff;
+            cursor: pointer;
+        }
     </style>
 </head>
 
